[package]
name = "yande_popular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
] }
anyhow = "1.0"
select = "0.6.0"
log = "0.4.14"
env_logger = "0.10.0"
sled = { version = "0.34.7" }
serde_json = "1.0.107"

once_cell = "1.8.0"

clap = { version = "4.4.6", features = ["derive", "env"] }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true
